--- a/group_vars/main.yaml
+++ b/group_vars/main.yaml
@@ -1,1 +1,1 @@
-Mysql_Root_Password: "{{ lookup('amazon.aws.aws_ssm', '/azharproject/mysql/mysql_root_password', region='us-east-1', decrypt=True ) }}"
+Mysql_Root_Password: "{{ lookup('amazon.aws.aws_ssm', '/azharproject/{{ env }}/mysql/mysql_root_password', region='us-east-1', decrypt=True ) }}"
