--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -9,3 +9,5 @@ Cart_Host: cart-{{ env }}.{{ domain_name }}
 Payment_Host: payment-{{ env }}.{{ domain_name }}
 Shipping_Host: shipping-{{ env }}.{{ domain_name }}
 version: "{{ 1.0 }}"
+
+Mysql_Root_Password: "{{ lookup('amazon.aws.aws_ssm', '/azharproject/{{ env }}/mysql/mysql_root_password', region='us-east-1', decrypt=True ) }}"
