--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -23,11 +23,11 @@
       state: present
   
   - name: connnect to mongodb catalogue
-    ansible.builtin.command: mongosh mongodb.azharprojects.site --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
+    ansible.builtin.command: mongosh {{ Mongodb_Host }} --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
     register: catalogue_output
   
   - name: load products into mongodb
-    ansible.builtin.shell: mongosh --host mongodb.azharprojects.site </app/db/master-data.js
+    ansible.builtin.shell: mongosh --host {{ Mongodb_Host }} </app/db/master-data.js
     when: catalogue_output.stdout | int < 0 #convert string to int
 
   - name: deamon reload start enable
