--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -12,4 +12,5 @@ Payment_Host: payment.backend-alb-{{ env }}.{{ domain_name }}
 Shipping_Host: shipping.backend-alb-{{ env }}.{{ domain_name }}
 version: "{{ 1.0 }}"
 
+Mysql_Root_User: root
 Mysql_Root_Password: "{{ lookup('amazon.aws.aws_ssm', '/azharproject/{{ env }}/mysql/mysql_root_password', region='us-east-1', decrypt=True ) }}"
