--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -15,23 +15,14 @@
   loop:
   - cryptography
   - PyMySQL
-  - boto3
-  - botocore
-
-- name: Explicitly look up and set MySQL root password as a simple fact
-  ansible.builtin.set_fact:
-    mysql_password_plain: "{{ lookup('amazon.aws.aws_ssm', '/azharproject/dev/mysql/mysql_root_password', region='us-east-1', decrypt=True ) }}"
-  # IMPORTANT: Force the lookup to happen on the controller where credentials exist
-  delegate_to: localhost
-  run_once: true
 
 - name: import shipping data into mysql
   community.mysql.mysql_db:
     state: import
     name: all
     login_host: "{{ Mysql_Host }}"
-    login_user: "{{ Mysql_Root_User }}"
-    login_password: "{{ mysql_password_plain }}" ##recent change
+    login_user: "{{ MYSQL_ROOT_USER }}"
+    login_password: "{{ MYSQL_ROOT_PASSWORD }}"
     target: "{{ item }}"
   loop:
   - /app/db/schema.sql
